Finished creating endpoints and documenting them
