# src/api/states/states.py
@@ -2,30 +2,30 @@ from flask import Flask, request, Response, jsonify, abort, Blueprint
 from src.api.security import requires_auth, requires_scope
 from .functions import *
 
-stocks_bp = Blueprint('stocks', __name__)
+states_bp = Blueprint('states', __name__)
 
-@stocks_bp.route('/stocks', methods=['GET'])
+@states_bp.route('/states', methods=['GET'])
 @requires_auth
-def stocks():
+def states():
     """
-    GET   - returns all stocks
+    GET   - returns all states
     """
     
     if request.method == 'GET':
-        response = get_stocks()
+        response = get_states()
         if 'error' in response:
             return jsonify(response), response['error']['code']
         else:
             return jsonify(response), 200 
 
-@stocks_bp.route('/stocks/<int:id>', methods=['GET'])
+@states_bp.route('/states/<int:id>', methods=['GET'])
 @requires_auth
-def get_stock(id):
+def get_state(id):
     """
-    GET   - returns the stocks with the stock id
+    GET   - returns the states with the state id
     """
     if request.method == 'GET':
-        response = get_stock_by_id(id)
+        response = get_state_by_id(id)
         if 'error' in response:
             return jsonify(response), response['error']['code']
         else:
